css/style.css
body {
    background: #f0ead6;
    font-family: 'Rubik', sans-serif;
    /*font-family: 'Slabo 27px', serif;*/
    margin-top: 150px;
}

h1 {
    font-size: 85px;
}

h2 {
    margin-top: 30px;
    max-width: 450px;
}

a {
    color: #686c6d;
    font-size: 20px;
}

a:hover {
    color: #c5a706;
    text-decoration: none;
}

#content {
    display: none;
}

.container {
    max-width: 820px;
}

.profile {
    display: table-cell;
    vertical-align: middle;
}

.img-circle {
    border-radius: 50%;
    max-width: 100%;
    height: auto;
    width: 300px;
}

.pic {
    padding-left: 40px;
}

.links {
    margin-top: 35px;
    font-size: 20px;
}

